src/objects/Charket__SurveyAnswer__c.object
<CustomObject>
    <fields>
        <fullName>Charket__Choice__c</fullName>
        <label>Choice</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__IsOther__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__SurveyQuestion__c</fullName>
        <label>Survey Question</label>
        <referenceTo>Charket__SurveyQuestion__c</referenceTo>
        <relationshipLabel>Survey Answers</relationshipLabel>
        <relationshipName>SurveyAnswers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Answer</label>
    <nameField>
        <displayFormat>SA-{0000000}</displayFormat>
        <label>Survey Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>